--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hashan-78",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@shadcn/ui": "^0.0.4",
     "@testing-library/jest-dom": "^5.17.0",
