--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-slick": "^0.30.3",
     "serve": "^14.2.4",
     "slick-carousel": "^1.8.1",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
