--- a/src/documents/webprojects.json
+++ b/src/documents/webprojects.json
@@ -3,18 +3,72 @@
         "title": "Financial research assistant", 
         "description": "The Financial Research Assistant is a robust, AI-powered solution for analyzing and querying financial reports. Its integration with Azure Blob Storage, combined with advanced NLP capabilities, provides users with efficient, accurate, and relevant insights, significantly enhancing financial data analysis and decision-making processes.", 
         "link": "" , 
-        "image": "../images/custom_gpt_image1.png" 
+        "image": "/images/custom_gpt_image1.png",
+        "technologies" : [
+            {
+                "language" : "React JS",
+                "color" : "text-blue-600"
+            },
+            {
+                "language" : "Node JS",
+                "color" : "text-green-600"
+            },
+            {
+                "language" : "Python",
+                "color" : "text-cyan-500"
+            },
+            {
+                "language" : "Mongo DB",
+                "color" : "text-green-700"
+            }
+        ] 
     },
     { 
         "title": "hashsports", 
         "description": "HashSports is a dynamic eCommerce platform developed using Vite + React, Tailwind CSS, and Express.js. Designed for a seamless and fast user experience, HashSports offers a modern interface with responsive design, ensuring smooth navigation across all devices.It has been utilized Vite and React for blazing-fast loading speeds and a dynamic user interface and Crafted a clean, responsive design with custom animations for an engaging user experience.", 
         "link": "https://github.com/hashan789/hashsports" , 
-        "image": "../images/custom_gpt_image1.png"
+        "image": "/images/hashsports.png",
+        "technologies" : [
+            {
+                "language" : "React JS",
+                "color" : "text-blue-600"
+            },
+            {
+                "language" : "Node JS",
+                "color" : "text-green-600"
+            },
+            {
+                "language" : "Tailwind CSS",
+                "color" : "text-purple-600"
+            },
+            {
+                "language" : "Express JS",
+                "color" : "text-black"
+            },
+            {
+                "language" : "Mongo DB",
+                "color" : "text-green-700"
+            }
+        ] 
     },
     { 
         "title": "Chit Chat", 
         "description": "ChitChat is an interactive web chat application developed using React, Socket.io, and Express.js, designed for seamless real-time communication. With a sleek and responsive interface, users can engage in dynamic conversations across devices. It has been leveraged Socket.io to enable instant message delivery and live typing indicators.", 
         "link": "https://github.com/hashan789/Intelli-brad-AI" , 
-        "image": "../images/custom_gpt_image1.png"
+        "image": "/images/chit_chat.png",
+        "technologies" : [
+            {
+                "language" : "React JS",
+                "color" : "text-blue-600"
+            },
+            {
+                "language" : "Node JS",
+                "color" : "text-green-600"
+            },
+            {
+                "language" : "Mongo DB",
+                "color" : "text-green-700"
+            }
+        ] 
     }
   ]
