--- a/src/documents/mlprojects.json
+++ b/src/documents/mlprojects.json
@@ -14,6 +14,10 @@
                 "color" : "#e1f10b"
             },
             {
+                "language" : "CSS3",
+                "color" : "#800080"
+            },
+            {
                 "language" : "Azure",
                 "color" : "#0072c6"
             }
@@ -26,12 +30,16 @@
         "image": "/images/email_spam_classifier.png",
         "technologies" : [
             {
-                "language" : "HTML",
+                "language" : "HTML5",
                 "color" : "#f34122"
             },
             {
                 "language" : "JavaScript",
                 "color" : "#e1f10b"
+            },
+            {
+                "language" : "CSS3",
+                "color" : "#800080"
             },
             {
                 "language" : "Python",
