--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://hashan789.github.io/hashan789",
   "name": "hashan-78",
   "version": "0.1.0",
   "private": true,
@@ -12,10 +13,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.8.4",
     "lucide-react": "^0.488.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fontawesome": "^1.7.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "^5.0.1",
@@ -25,10 +28,13 @@
     "serve": "^14.2.4",
     "slick-carousel": "^1.8.1",
     "typewriter-effect": "^2.21.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy" : "gh-pages -d build",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
@@ -52,6 +58,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15"
   }
