--- a/src/documents/mlprojects.json
+++ b/src/documents/mlprojects.json
@@ -3,7 +3,7 @@
         "title": "Python AI chatbot", 
         "description": "Python AI chatbot is a web application designed to provide customer support. The user interface is developed using JavaScript, which can include a web-based interface. The chatbot maintains a conversation context, remembering previous messages to ensure relevant responses.", 
         "link": "https://github.com/hashan789/Intelli-brad-AI" , 
-        "project": "https://intelli-brad-chat-d3d4abg7gthxc2d7.swedencentral-01.azurewebsites.net/",
+        "project": "",
         "image": "/images/chatbot.png",
         "technologies" : [
             {
@@ -28,7 +28,7 @@
         "title": "Email spam classifier", 
         "description": "Email spam classifier is a web application designed to automatically categorize incoming emails as either 'spam' or 'ham'. The user interface of this application is built using flask. This is a text classification problem where the model learns to distinguish between legitimate and harmful emails based on their content and features.", 
         "link": "https://github.com/hashan789/Email-Spam-Classifier" , 
-        "project": "https://email-spam-classifier-sl-beegfwgccvcmhsfq.canadacentral-01.azurewebsites.net/",
+        "project": "",
         "image": "/images/email_spam_classifier.png",
         "technologies" : [
             {
