--- a/src/documents/webprojects.json
+++ b/src/documents/webprojects.json
@@ -1,38 +1,76 @@
 [
     { 
-        "title": "Financial research assistant", 
-        "description": "The Financial Research Assistant is a robust, AI-powered solution for analyzing and querying financial reports. Its integration with Azure Blob Storage, combined with advanced NLP capabilities, provides users with efficient, accurate, and relevant insights, significantly enhancing financial data analysis and decision-making processes.", 
-        "link": "https://github.com/hashan789/financial-research-assistant" ,
-        "project" : "" ,
-        "image": "/images/custom_gpt_image1.png",
+        "title": "hashsports-ecommerce", 
+        "description": "HashSports is a dynamic eCommerce platform developed using HTML, CSS, PHP, and MySQL. Designed for a seamless and fast user experience, HashSports offers a modern interface with responsive design, ensuring smooth navigation across all devices.It has been utilized Vite and React for blazing-fast loading speeds and a dynamic user interface and Crafted a clean, responsive design with custom animations for an engaging user experience.", 
+        "link": "https://github.com/hashan789/hashsports-ecommerce" ,
+        "project" : "https://hashsports.infinityfreeapp.com/index.php" ,
+        "image": "/images/hashsports-ecommerce.png",
         "technologies" : [
             {
-                "language" : "React",
+                "language" : "HTML5",
                 "color" : "#0000ff"
             },
             {
-                "language" : "Node.js",
+                "language" : "JavaScript",
                 "color" : "#008000"
-            },
-            {
-                "language" : "Python",
-                "color" : "#27a3a3"
             },
             {
                 "language" : "CSS3",
                 "color" : "#800080"
             },
             {
-                "language" : "Express JS",
+                "language" : "php",
                 "color" : "#000000"
             },
             {
-                "language" : "Mongo DB",
-                "color" : "#72db72"
+                "language" : "MySQL",
+                "color" : "#000000"
+            }
+        ] 
+    },
+    { 
+        "title": "Visitsrilanka", 
+        "description": "visitSriLanka is a blog website built using HTML, CSS, PHP, and MySQL, dedicated to showcasing the rich culture, traditions, and lifestyle of Sri Lanka. The platform features a variety of blogs covering history, cuisine, festivals, and local experiences, providing authentic insights for both locals and international readers. Designed with a responsive layout and a dynamic backend, the website offers a seamless and user-friendly experience while promoting cultural awareness and tourism through engaging content.", 
+        "link": "https://github.com/hashan789/visitsrilanka" ,
+        "project" : "http://visitsrilankanew.infinityfree.me/index.php" ,
+        "image": "/images/hashsports.png",
+        "technologies" : [
+            {
+                "language" : "HTML5",
+                "color" : "#0000ff"
             },
             {
-                "language" : "Azure",
-                "color" : "#0072c6"
+                "language" : "JavaScript",
+                "color" : "#008000"
+            },
+            {
+                "language" : "CSS3",
+                "color" : "#800080"
+            },
+            {
+                "language" : "php",
+                "color" : "#000000"
+            },
+            {
+                "language" : "MySQL",
+                "color" : "#000000"
+            }
+        ] 
+    },
+    { 
+        "title": "MemeGen", 
+        "description": "MemeGen, A social media generator built with React.js is a dynamic web application designed to create visual content suitable for various social platforms.", 
+        "link": "https://github.com/hashan789/Meme-Gen" ,
+        "project" : "https://memegenofficial.netlify.app/" ,
+        "image": "/images/memegen.png",
+        "technologies" : [
+            {
+                "language" : "React",
+                "color" : "#0000ff"
+            },
+            {
+                "language" : "CSS3",
+                "color" : "#72db72"
             }
         ] 
     },
@@ -52,7 +90,7 @@
                 "color" : "#008000"
             },
             {
-                "language" : "CSS3",
+                "language" : "Tailwind CSS",
                 "color" : "#800080"
             },
             {
@@ -65,6 +103,10 @@
             },
             {
                 "language" : "Azure",
+                "color" : "#0072c6"
+            },
+            {
+                "language" : "Redis",
                 "color" : "#0072c6"
             }
         ] 
@@ -90,6 +132,10 @@
             },
             {
                 "language" : "Azure",
+                "color" : "#0072c6"
+            },
+            {
+                "language" : "Socket.io",
                 "color" : "#0072c6"
             }
         ] 
